; ModuleID = '/home/carl/AnghaBench/linux/drivers/misc/mic/scif/extr_scif_rb.c_scif_rb_init.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/misc/mic/scif/extr_scif_rb.c_scif_rb_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.scif_rb = type { i32, i8**, i8**, i8*, i8*, i8* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @scif_rb_init(%struct.scif_rb* %0, i8** %1, i8** %2, i8* %3, i32 %4) #0 {
  %6 = alloca %struct.scif_rb*, align 8
  %7 = alloca i8**, align 8
  %8 = alloca i8**, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  store %struct.scif_rb* %0, %struct.scif_rb** %6, align 8
  store i8** %1, i8*** %7, align 8
  store i8** %2, i8*** %8, align 8
  store i8* %3, i8** %9, align 8
  store i32 %4, i32* %10, align 4
  %11 = load i8*, i8** %9, align 8
  %12 = load %struct.scif_rb*, %struct.scif_rb** %6, align 8
  %13 = getelementptr inbounds %struct.scif_rb, %struct.scif_rb* %12, i32 0, i32 5
  store i8* %11, i8** %13, align 8
  %14 = load i32, i32* %10, align 4
  %15 = shl i32 1, %14
  %16 = load %struct.scif_rb*, %struct.scif_rb** %6, align 8
  %17 = getelementptr inbounds %struct.scif_rb, %struct.scif_rb* %16, i32 0, i32 0
  store i32 %15, i32* %17, align 8
  %18 = load i8**, i8*** %7, align 8
  %19 = load %struct.scif_rb*, %struct.scif_rb** %6, align 8
  %20 = getelementptr inbounds %struct.scif_rb, %struct.scif_rb* %19, i32 0, i32 1
  store i8** %18, i8*** %20, align 8
  %21 = load i8**, i8*** %8, align 8
  %22 = load %struct.scif_rb*, %struct.scif_rb** %6, align 8
  %23 = getelementptr inbounds %struct.scif_rb, %struct.scif_rb* %22, i32 0, i32 2
  store i8** %21, i8*** %23, align 8
  %24 = load i8**, i8*** %7, align 8
  %25 = load i8*, i8** %24, align 8
  %26 = load %struct.scif_rb*, %struct.scif_rb** %6, align 8
  %27 = getelementptr inbounds %struct.scif_rb, %struct.scif_rb* %26, i32 0, i32 4
  store i8* %25, i8** %27, align 8
  %28 = load i8**, i8*** %8, align 8
  %29 = load i8*, i8** %28, align 8
  %30 = load %struct.scif_rb*, %struct.scif_rb** %6, align 8
  %31 = getelementptr inbounds %struct.scif_rb, %struct.scif_rb* %30, i32 0, i32 3
  store i8* %29, i8** %31, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
